# wept

./: .cursorrules  .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  rust-analyzer.toml
src/: .env.example  main.rs  routes.rs
src/app/: config.rs  error.rs  state.rs
src/controller/: base.rs  mod.rs  posts.rs  product.rs  products.rs
src/controllers/: cart.rs  category.rs  common.rs  mod.rs  navigation.rs  page.rs  post.rs  post_controller.rs  product.rs  product_controller.rs  settings.rs
src/graphql/: client.rs  mod.rs  post_query.graphql  posts_query.graphql  product_query.graphql  products_query.graphql  query.graphql  schema-remaining.graphql  schema.graphql
src/graphql/models/: cart.rs  category.rs  footer.rs  mod.rs  navigation.rs  page.rs  post.rs  product.rs  settings.rs
src/graphql/queries/: mod.rs  post.rs  product.rs
src/graphql/schema/: add_to_cart_mutation.graphql  cart_query.graphql  categories_query.graphql  category_query.graphql  footer_query.graphql  navigation_query.graphql  page_query.graphql  pages_query.graphql  posts_query.graphql  product_query.graphql  products_query.graphql  remove_items_from_cart_mutation.graphql  schema.graphql  settings_query.graphql  update_item_quantities_mutation.graphql
src/graphql/schema/product/: search_products_query.graphql
src/graphql/source/: wordpress-v6.7.2.graphql
src/model/: mod.rs  pagination.rs  posts.rs  product.rs  products.rs
src/models/: category.rs  mod.rs  page.rs  pagination.rs  post.rs  product.rs
src/view/components/: entity_list.rs  loader.rs  mod.rs  nav.rs  post_item.rs  posts.rs  product_item.rs  products.rs
src/view/pages/: errors.rs  home.rs  mod.rs  post.rs  product.rs
src/views/: icons.rs  layouts.rs  mod.rs
src/views/components/: mod.rs
src/views/components/cart/: icon.rs  item.rs
src/views/components/category/: category_card.rs  category_header.rs  category_list.rs  mod.rs
src/views/components/common/: card.rs  entity_list.rs  loader.rs  mod.rs
src/views/components/home/: mod.rs
src/views/components/layout/: footer.rs  header.rs  mod.rs  nav.rs
src/views/components/page/: mod.rs  page_card.rs
src/views/components/post/: mod.rs  post_card.rs
src/views/components/product/: add_to_cart_form.rs  details.rs  image_gallery.rs  mod.rs  product_card.rs  product_grid.rs
src/views/components/search/: search_bar.rs
src/views/pages/: cart.rs  categories.rs  category.rs  home.rs  list.rs  mod.rs  page.rs  pages.rs  post.rs  posts.rs  product.rs  search.rs
src/views/pages/errors/: generic_error.rs  mod.rs  not_found.rs
